# pmemstream

./: .clang-format  .gitignore  .lgtm.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL.md  LICENSE  README.md  codecov.yml  index.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: basic.yml  codeql.yml  compare_bench.yml  coverity.yml  gha.yml  nightly.yml  self_hosted.yml
benchmarks/: CMakeLists.txt  measure.hpp
benchmarks/append/: CMakeLists.txt  main.cpp
cmake/: FindLIBPMEM2.cmake  FindLIBPMEMLOG.cmake  FindMINIASYNC.cmake  cmake_uninstall.cmake.in  functions.cmake  libpmemstream.pc.in  packages.cmake
doc/: CMakeLists.txt  RELEASE_STEPS.md  libpmemstream.3.md  libpmemstream.7.md
examples/: CMakeLists.txt  README.md  examples_helpers.h  examples_helpers.hpp
examples/01-iterate/: main.c
examples/01_basic_iterate/: CMakeLists.txt  main.c
examples/02-visual_iterator/: main.cpp
examples/02_visual_iterator/: CMakeLists.txt  main.cpp
examples/03_reserve_publish/: CMakeLists.txt  main.cpp
examples/04_basic_async/: CMakeLists.txt  main.cpp
examples/04_ringbuffer/: main.c  ringbuffer.c  ringbuffer.h
examples/05_ringbuffer/: CMakeLists.txt  main.c  ringbuffer.c  ringbuffer.h
examples/05_timestamp_based_order/: CMakeLists.txt  README.md  main.cpp
examples/basic_iterate/: CMakeLists.txt  main.c
examples/visual_iterator/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  dummy.c  id_manager.c  id_manager.h  iterator.c  iterator.h  libpmemstream.c  libpmemstream.map  libpmemstream_internal.h  memcpy.c  memcpy.h  mpmc_queue.c  mpmc_queue.h  pmemstream.c  pmemstream_runtime.h  ravl.c  ravl.h  region.c  region.h  region_allocator.c  region_allocator.h  singly_linked_list.c  singly_linked_list.h  span.c  span.h  thread_id.c  thread_id.h
src/common/: util.h
src/critnib/: critnib.c  critnib.h  pmdk-compat.h
src/include/: dummy.h  libpmemstream.h  pmemstream.h
src/region_allocator/: allocator_base.h  region_allocator.c  region_allocator.h
tests/: CMakeLists.txt  README.md  popcount.cpp
tests/abi/: check_symbols.sh
tests/api_c/: append_entry.c  async.c  entry_iterator.c  get_last_entry.c  region_allocate.c  region_create.c  region_iterator.c  reserve_and_publish.c  stream_from_map.c  stream_from_map.cpp  timestamp.c
tests/benchmarks/: append.cmake
tests/cmake/: exec_functions.cmake  functions.cmake  match  run_default.cmake  run_with_file.cmake  true.cmake
tests/common/: check_is_pmem.cpp  env_setter.hpp  pthread_common.hpp  random_helpers.hpp  rapidcheck_helpers.hpp  stream_helpers.h  stream_helpers.hpp  stream_span_helpers.cpp  stream_span_helpers.hpp  test_backtrace.c  test_backtrace.h  test_sighandlers.h  test_sighandlers.hpp  thread_helpers.hpp  thread_helpers_test.cpp  unittest.h  unittest.hpp  valgrind_internal.c  valgrind_internal.h
tests/integrity/: append_break.cmake  append_break.cpp  append_break.gdb  append_break_0.gdb  append_break_1.gdb  append_break_2.gdb  append_break_lazy.cmake  append_pmreorder.cpp  append_pmreorder.hpp  append_timestamp_recovery.cmake  append_timestamp_recovery.cpp  append_timestamp_recovery.gdb  append_to_existing_region_pmreorder.cpp  append_to_new_region_pmreorder.cpp  crash_during_recovery.cmake  crash_during_recovery_subtest.cmake  default_create_fill_check.cmake  default_create_fill_check_negative.cmake  multi_region_pmreorder.cpp  pmreorder.conf  reserve_publish.cpp  singly_linked_list_pmreorder.cmake  singly_linked_list_pmreorder.cpp  singly_linked_list_pmreorder_negative.cmake
tests/layout/: iterate_all.cpp  iterate_validation.cpp
tests/unittest/: append.cpp  append_oom.cpp  concurrent_append_iterate.cpp  concurrent_async_wait.cpp  concurrent_iterate.cpp  concurrent_iterate_with_append.cpp  create.cpp  get_region_context.cpp  get_region_runtime.cpp  id_manager.cpp  id_manager_multithreaded.cpp  mpmc_queue.cpp  mpmc_queue_multithreaded.cpp  multi_region.cpp  multi_region_state.cpp  pmemstream_memcpy.cpp  pmemstream_memcpy_basic.cpp  pmemstream_memcpy_pbt.cpp  popcount.cpp  publish_append_async.cpp  region_allocator.cpp  region_initialize.cpp  region_runtime_initialize.cpp  regions_state.cpp  reserve_publish.cpp  reserve_write.cpp  run_on_existing.cmake  singly_linked_list.cpp  singly_linked_list_ls.cpp  singly_linked_list_state.cpp  slist.cpp  slist_insert_test.cpp  slist_simple_test.cpp  thread_id.cpp  timestamp.cpp  util_common.cpp  util_popcount.cpp
tests/unittest/mpmc_queue/: mpmc_queue.cpp  mpmc_queue.hpp  mpmc_queue_multithreaded.cpp
utils/: check_whitespace  cppstyle  run-compare-bench.sh
utils/check_license/: check-headers.sh  file-exceptions.sh
utils/docker/: build.sh  prepare-for-build.sh  pull-or-rebuild-image.sh  run-build.sh  run-compare-bench.sh  run-coverity.sh  run-doc-update.sh  set-ci-vars.sh  test_all_commits.sh
utils/docker/images/: build-image.sh  download-scripts.sh  fedora-34.Dockerfile  fedora-35.Dockerfile  install-miniasync.sh  install-rapidcheck.sh  ubuntu-20.04.Dockerfile  ubuntu-21.04.Dockerfile  ubuntu-21.10.Dockerfile  ubuntu-22.04.Dockerfile
utils/md2man/: default.man  md2man.sh
